--- a/ListeningrainBlog/ListeningrainBlog_service/pom.xml
+++ b/ListeningrainBlog/ListeningrainBlog_service/pom.xml
@@ -61,6 +61,23 @@
             <version>0.10</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/junit/junit -->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/org.springframework/spring-test -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+            <version>5.0.9.RELEASE</version>
+            <scope>test</scope>
+        </dependency>
+
+
+
 
 
     </dependencies>
