前端工程主页面进行分离操作，提取公共部分

--- a/ListeningrainBlog/ListeningrainBlog_rest/src/main/resources/application.properties
+++ b/ListeningrainBlog/ListeningrainBlog_rest/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 ###THYMELEAF (ThymeleafAutoConfiguration)
 ########################################################
 ## 前缀prefix
-spring.thymeleaf.prefix=classpath:WEB-INF/templates/
+spring.thymeleaf.prefix=classpath:templates/default/
 ## 后缀suffix
 spring.thymeleaf.suffix=.html
 ## 类型mode
@@ -13,3 +13,4 @@ spring.thymeleaf.encoding=UTF-8
 spring.thymeleaf.content-type=text/html
  #set to false for hot refresh
 spring.thymeleaf.cache=false
+
