--- a/ListeningrainBlog/ListeningrainBlog_service_api/pom.xml
+++ b/ListeningrainBlog/ListeningrainBlog_service_api/pom.xml
@@ -11,5 +11,16 @@
 
     <artifactId>ListeningrainBlog_service_api</artifactId>
 
+    <dependencies>
+        <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.2</version>
+            <scope>provided</scope>
+        </dependency>
+
+    </dependencies>
+
 
 </project>
