--- a/ListeningrainBlog/ListeningrainBlog_dao/pom.xml
+++ b/ListeningrainBlog/ListeningrainBlog_dao/pom.xml
@@ -11,5 +11,20 @@
 
     <artifactId>ListeningrainBlog_dao</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.mybatis.spring.boot</groupId>
+            <artifactId>mybatis-spring-boot-starter</artifactId>
+            <version>1.1.1</version>
+        </dependency>
+
+        <!--内部jar包依赖-->
+        <dependency>
+            <groupId>listeningrain.cn.blog</groupId>
+            <artifactId>ListeningrainBlog_service_api</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
+
 
 </project>
