--- a/ListeningrainBlog/ListeningrainBlog_rest/src/main/resources/application.properties
+++ b/ListeningrainBlog/ListeningrainBlog_rest/src/main/resources/application.properties
@@ -16,5 +16,9 @@ spring.thymeleaf.cache=false
 
 server.port=8000
 
+#上传文件相关
+spring.http.multipart.max-file-size=20MB
+spring.http.multipart.max-request-size=21MB
+
 
 
