优化页面显示

--- a/ListeningrainBlog/ListeningrainBlog_rest/src/main/resources/application.properties
+++ b/ListeningrainBlog/ListeningrainBlog_rest/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.thymeleaf.prefix=classpath:templates/default/
 ## ºó×ºsuffix
 spring.thymeleaf.suffix=.html
 ## ÀàÐÍmode
-spring.thymeleaf.mode=HTML5
+spring.thymeleaf.mode=HTML
 ## charset=<encoding> is added
 spring.thymeleaf.encoding=UTF-8
 ##content-type
