--- a/ListeningrainBlog/ListeningrainBlog_rest/pom.xml
+++ b/ListeningrainBlog/ListeningrainBlog_rest/pom.xml
@@ -8,8 +8,6 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <packaging>war</packaging>
-
     <artifactId>ListeningrainBlog_rest</artifactId>
 
     <dependencies>
@@ -105,6 +103,30 @@
 
 
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <!-- 指定该Main Class为全局的唯一入口 -->
+                    <mainClass>listeningrain.cn.blog.Application
+                    </mainClass>
+                    <layout>ZIP</layout>
+                </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>repackage</goal><!--可以把依赖的包都打包到生成的Jar包中-->
+                        </goals>
+
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 
 
 </project>
