--- a/ListeningrainBlog/ListeningrainBlog_rest/src/main/resources/log4j.properties
+++ b/ListeningrainBlog/ListeningrainBlog_rest/src/main/resources/log4j.properties
@@ -2,7 +2,7 @@ log4j.rootLogger=info,ServerDailyRollingFile,stdout
 
 log4j.appender.ServerDailyRollingFile=org.apache.log4j.DailyRollingFileAppender
 log4j.appender.ServerDailyRollingFile.DatePattern='.'yyyy-MM-dd
-log4j.appender.ServerDailyRollingFile.File=D://test/test.log
+log4j.appender.ServerDailyRollingFile.File=logs/listeningrainblog-rest-log
 log4j.appender.ServerDailyRollingFile.layout=org.apache.log4j.PatternLayout
 log4j.appender.ServerDailyRollingFile.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} [%t] %-5p [%c] - %m%n
 log4j.appender.ServerDailyRollingFile.Append=true
