--- a/ListeningrainBlog/ListeningrainBlog_rest/src/main/resources/application.properties
+++ b/ListeningrainBlog/ListeningrainBlog_rest/src/main/resources/application.properties
@@ -20,5 +20,7 @@ server.port=9008
 spring.http.multipart.max-file-size=20MB
 spring.http.multipart.max-request-size=21MB
 
+spring.resources.static-locations=classpath:/static,classpath:/public,classpath:/resources,classpath:/META-INF/resources
+
 
 
