--- a/ListeningrainBlog/ListeningrainBlog_rest/src/main/resources/application.properties
+++ b/ListeningrainBlog/ListeningrainBlog_rest/src/main/resources/application.properties
@@ -14,6 +14,7 @@ spring.thymeleaf.content-type=text/html
  #set to false for hot refresh
 spring.thymeleaf.cache=false
 
+######端口号#######
 server.port=9008
 
 #上传文件相关
@@ -23,12 +24,12 @@ spring.http.multipart.max-request-size=21MB
 spring.resources.static-locations=classpath:/static,classpath:/public,classpath:/resources,classpath:/META-INF/resources
 
 ###############开发环境#################
-#img-upload-dir =ListeningrainBlog_rest/target/classes/static/upload-img
-#website-url =http://localhost:9008
+img-upload-dir =ListeningrainBlog_rest/target/classes/static/upload-img
+website-url =http://localhost:9008
 ###############开发环境#################
 
 ##############生产环境#################
-img-upload-dir =resources/static/upload-dir
-website-url =http://blog.listeningrain.cn
+#img-upload-dir =resources/static/upload-dir
+#website-url =https://blog.listeningrain.cn
 ##############生产环境#################
 
