--- a/ListeningrainBlog/ListeningrainBlog_service/src/main/resources/jdbc.properties
+++ b/ListeningrainBlog/ListeningrainBlog_service/src/main/resources/jdbc.properties
@@ -1,5 +1,5 @@
 driverClassName=com.mysql.jdbc.Driver
 #url=jdbc:mysql://localhost:3306/listeningrainblog?characterEncoding=UTF-8
-url=jdbc:mysql://cdb-4sautjqm.bj.tencentcdb.com:10048/listeningrainblog?characterEncoding=UTF-8
+url=jdbc:mysql://localhost:3306/listeningrainblog?characterEncoding=UTF-8
 username1=root
-password=19950209sqfSQF
+password=root
