--- a/ListeningrainBlog/ListeningrainBlog_rest/src/main/resources/application.properties
+++ b/ListeningrainBlog/ListeningrainBlog_rest/src/main/resources/application.properties
@@ -1,35 +1,36 @@
 ########################################################
 ###THYMELEAF (ThymeleafAutoConfiguration)
 ########################################################
-## Ç°×ºprefix
+## å‰ç¼€prefix
 spring.thymeleaf.prefix=classpath:templates/default/
-## ºó×ºsuffix
+## åç¼€suffix
 spring.thymeleaf.suffix=.html
-## ÀàĞÍmode
+## ç±»å‹mode
 spring.thymeleaf.mode=HTML
 ## charset=<encoding> is added
 spring.thymeleaf.encoding=UTF-8
 ##content-type
 spring.thymeleaf.content-type=text/html
- #set to false for hot refresh
+#set to false for hot refresh
 spring.thymeleaf.cache=false
 
-######¶Ë¿ÚºÅ#######
+######ç«¯å£å·#######
 server.port=9008
 
-#ÉÏ´«ÎÄ¼şÏà¹Ø
+#ä¸Šä¼ æ–‡ä»¶ç›¸å…³
 spring.http.multipart.max-file-size=20MB
 spring.http.multipart.max-request-size=21MB
 
 spring.resources.static-locations=classpath:/static,classpath:/public,classpath:/resources,classpath:/META-INF/resources
 
-###############¿ª·¢»·¾³#################
+###############å¼€å‘ç¯å¢ƒ#################
 img-upload-dir =ListeningrainBlog_rest/target/classes/static/upload-img
 website-url =http://localhost:9008
-###############¿ª·¢»·¾³#################
+###############å¼€å‘ç¯å¢ƒ#################
 
-##############Éú²ú»·¾³#################
+##############ç”Ÿäº§ç¯å¢ƒ#################
+#ç”Ÿäº§ç¯å¢ƒæ–‡ä»¶ä¸Šä¼ é»˜è®¤è·¯å¾„ï¼Œè¯·ä¸è¦æ›´æ”¹
 #img-upload-dir =resources/static/upload-dir
 #website-url =https://blog.listeningrain.cn
-##############Éú²ú»·¾³#################
+##############ç”Ÿäº§ç¯å¢ƒ#################
 
