--- a/ListeningrainBlog/ListeningrainBlog_rest/src/main/resources/application.properties
+++ b/ListeningrainBlog/ListeningrainBlog_rest/src/main/resources/application.properties
@@ -24,13 +24,14 @@ spring.http.multipart.max-request-size=21MB
 spring.resources.static-locations=classpath:/static,classpath:/public,classpath:/resources,classpath:/META-INF/resources
 
 ###############开发环境#################
-img-upload-dir =ListeningrainBlog_rest/target/classes/static/upload-img
+img-upload-dir =ListeningrainBlog/ListeningrainBlog_rest/target/classes/static/upload-img
 website-url =http://localhost:9008
 ###############开发环境#################
 
 ##############生产环境#################
-#生产环境文件上传默认路径，请不要更改
+#生产环境文件上传默认路径，
 #img-upload-dir =resources/static/upload-img
+#域名或者服务器公网IP
 #website-url =https://blog.listeningrain.cn
 ##############生产环境#################
 
